assets/projects/projects.css
html {
    scroll-behavior: smooth;
}

.main {
    min-width: 390px;
}

.col {
    float: left;
}

#to-the-top {
    display: none;
    position: absolute;
    bottom: 20px;
    right: 0px;
}

/* side menu */

.menu {
    color: white;
    margin-right: 20px;
    width: calc(30% - 20px);
    height: 100%;
    position: relative;
}

.menu>div {
    text-align: end;
}

.menu-name {
    font-size: 190%;
    text-transform: uppercase;
}

.menu-title {
    text-transform: uppercase;
}

hr {
    border-color: rgb(101, 101, 101);
    margin-top: 20px;
    margin-bottom: 20px;
}

.bottom-hr {
    display: none;
    margin-bottom: 40px;
}

a, a:visited, a:hover, a:active {
    color: white;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.toc {
    margin-bottom: 10px;
}

.toc>a {
    text-transform: uppercase;
    color: rgb(201, 201, 201);
}

/* entries */

.content {
    scroll-behavior: smooth;
    display: flex;
    flex-direction: column;
    width: 70%;
    height: calc(100vh - 60px);
    overflow-y: auto;
}

.entry {
    margin-right: 20px;
    margin-bottom: 20px;
    text-align: justify;
}

.entry:first-of-type>h2 {
    margin-top: 0;
}

.entry>h2 {
    color: white;
}

.entry>h2, .entry>div {
    margin-bottom: 10px;
}

/* touch-screen only rules */

@media
(min-resolution: 192dpi),
(max-width: 900px) {

    #to-the-top {
        position: fixed;
        bottom: 20px;
        right: unset;
        left: calc(calc(100% - 45em) / 2);

        background: white;
        width: 100px;
        height: 30px;
        line-height: 30px;
        text-align: center;
        border-radius: 30px;
    }

    #to-the-top>a {
        color: black;
    }

    .menu {
        width: 100%;
        float: unset;
        height: unset;
        position: unset;
    }

    .menu>div {
        text-align: start;
    }

    .bottom-hr {
        display: block;
    }

    .content {
        height: unset;
        width: 100%;
        float: unset;
    }
}

@media
(max-width: 47em) {
    #to-the-top {
        left: 8px;
    }
}

